--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.5.2",
+    "he": "^1.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.486.0",
     "next": "15.2.4",
@@ -57,6 +58,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.17",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/he": "^1.2.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
