--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^2.0.3",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.1.0",
     "vaul": "^1.1.2"
   },
