--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "embla-carousel-react": "^8.5.2",
     "he": "^1.2.0",
     "input-otp": "^1.4.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.486.0",
+    "mongoose": "^8.13.2",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -60,6 +62,7 @@
     "@tailwindcss/postcss": "^4.0.17",
     "@tailwindcss/typography": "^0.5.16",
     "@types/he": "^1.2.3",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
